--- a/BeerApp/Views/Home/Index.cshtml
+++ b/BeerApp/Views/Home/Index.cshtml
@@ -1,24 +1,34 @@
 ﻿
 @section scripts {
     <script src="~/Scripts/angular.min.js"></script>
-    <script src="~/MyScripts/Ingredients.js"></script>
+    <script src="~/MyScripts/beerController.js"></script>
 }
 
 <div class="jumbotron">
     <h1>Beer App</h1>
     <p class="lead">Beer Recipe</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
+    </p>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>TBD</p>
-    </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-        <div data-ng-app="myModule">
-            <form name="mainForm" data-ng-submit="sendForm()" data-ng-controller="myController" novalidate>
+<div data-ng-app="myModule">
+
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Getting started</h2>
+            <p>TBD</p>
+        </div>
+        <div class="col-md-4">
+            <div data-ng-controller="recipeController">
+                <p>Recipes </p>
+                <ul>
+                    <li ng-repeat="recipe in recipes">
+                        <p>{{recipe.Name}} {{Recipe.Description}}</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <form name="mainForm" data-ng-submit="sendForm()" data-ng-controller="ingredientController" novalidate>
                 <div class="error">{{message}}</div>
                 <!--   will code here -->
                 <select data-ng-model="ingredient" data-ng-options="i.Id as i.Name for i in ingredients" data-ng-change="IngredientSelected()">
@@ -28,4 +38,4 @@
         </div>
     </div>
 
-</div>
+    </div>
